Fixed an error in the vertical align class.

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,6 @@
 font-family:  { 'Press Start 2P', cursive;   }
 
 .vertical-center {
-min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
-min-height: 100vh; /* These two lines are counted as one :-)       */
 
 display: flex;
 align-items: center;
